--- a/index.css
+++ b/index.css
@@ -14,8 +14,20 @@ body {
 	padding:1% 1% 1% 1%;
 }
 
-#uploader{
+#uploadReplay{
 	margin-top:2%;
 	margin-left:27%;
 	margin-right:27%;
+	padding-top:2%;
+	padding-bottom:2%;
+	text-align:center;
+	background-color: rgba(150, 150, 150, .5);
+	border-radius:50px;
+	font-family: "Verdana";
 }
+
+.errorText{
+	color:black;
+	font-family: "Verdana";
+}
+
