--- a/index.css
+++ b/index.css
@@ -31,3 +31,16 @@ body {
 	font-family: "Verdana";
 }
 
+footer{
+	font-family: "Verdana";
+	position:fixed;
+	width:100%;
+	text-align:center;
+	margin-left:-1%;
+	padding-right:1%;
+	padding-top:1%;
+	padding-bottom:1%;
+    bottom: 0;
+	background-color: rgba(150, 150, 150, .5);
+}
+
