--- a/css/view.css
+++ b/css/view.css
@@ -21,6 +21,14 @@ video{
 }
 
 section{
+	display:block;
+	font-family:"Verdana";
+	text-align:center;
+	margin:auto;
+	margin-left:20%;
+	margin-right:20%;
+	margin-top:20px;
+	padding:1% 1% 1% 1%;
 	background-color: rgba(150, 150, 150, .5);
 	border-radius:50px;
 }
