--- a/css/search.css
+++ b/css/search.css
@@ -14,3 +14,37 @@ body {
 	font-size:20px;
 	border-radius:50px;
 }
+
+#replayBlock {
+	height:10%;
+	width:60%;
+	display:block;
+	margin:auto;
+	margin-top:20px;
+	font-family:"Verdana";
+	font-size:20px;
+	background-color: rgba(150, 150, 150, .5);
+	padding:1% 1% 1% 1%;
+	border-radius:50px;
+}
+
+#replayBlock img{
+	display: block;
+	height:200px;
+	margin:1% 1% 1% 1%;
+}
+
+footer{
+	font-family: "Verdana";
+	position:fixed;
+	width:100%;
+	text-align:center;
+	margin-left:-1%;
+	padding-right:1%;
+	padding-top:1%;
+	padding-bottom:1%;
+    bottom: 0;
+	background-color: rgba(150, 150, 150, .5);
+}
+
+
