--- a/css/view.css
+++ b/css/view.css
@@ -32,3 +32,16 @@ section{
 	background-color: rgba(150, 150, 150, .5);
 	border-radius:50px;
 }
+
+footer{
+	font-family: "Verdana";
+	position:fixed;
+	width:100%;
+	text-align:center;
+	margin-left:-1%;
+	padding-right:1%;
+	padding-top:1%;
+	padding-bottom:1%;
+    bottom: 0;
+	background-color: rgba(150, 150, 150, .5);
+}
