--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,10 @@ body {
 }
 
 #uploadReplay{
+	display:block;
 	margin-top:2%;
-	margin-left:27%;
-	margin-right:27%;
+	margin-left:30%;
+	margin-right:30%;
 	padding-top:2%;
 	padding-bottom:2%;
 	text-align:center;
@@ -47,6 +48,18 @@ body {
 	height:150px;
 	margin:2% 2% 1% 1%;
 	display:inline-block;
+}
+
+#fileToUpload{
+	margin:auto;
+	width:90%;
+	display: block;
+	padding-bottom:10%;
+	padding-top:10%;
+	border-radius:20px;
+	border-color:black;
+	border-style: dotted;
+	text-align:center;
 }
 
 footer{
