--- a/css/view.css
+++ b/css/view.css
@@ -1,5 +1,6 @@
 body {
     background-image: url("../images/background.png");
+	padding-bottom:5%;
 }
 
 span{
@@ -11,9 +12,8 @@ span{
 	margin-bottom:1%;
 }
 
-video{
+iframe{
 	display:block;
-	width:60%;
 	margin:auto;
 	border:5px;
 	border-color:gray;
@@ -36,6 +36,7 @@ section{
 footer{
 	font-family: "Verdana";
 	position:fixed;
+	height:3%;
 	width:100%;
 	text-align:center;
 	margin-left:-1%;
@@ -44,4 +45,5 @@ footer{
 	padding-bottom:1%;
     bottom: 0;
 	background-color: rgba(150, 150, 150, .5);
+	overflow:hidden;
 }
