--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body {
     background-image: url("../images/background.png");
+	padding-bottom:5%;
 }
 
 #logo{
@@ -20,7 +21,7 @@ body {
 	margin-left:30%;
 	margin-right:30%;
 	padding-top:2%;
-	padding-bottom:2%;
+	padding-bottom:1%;
 	text-align:center;
 	background-color: rgba(150, 150, 150, .5);
 	border-radius:50px;
@@ -39,7 +40,7 @@ body {
 	border-radius:50px;
 	margin:auto;
 	margin-top:2%;
-	margin-bottom:5%;
+	margin-bottom:2%;
 	text-align:center;
 }
 
@@ -62,6 +63,23 @@ body {
 	text-align:center;
 }
 
+span{
+	display: block;
+	text-align:center;
+	margin-bottom:2%;
+	height:15%;
+	font-family:"Verdana";
+}
+
+input[type=submit] {
+    width: 20em;  height: 3em;
+	font-family:"Verdana";
+}
+
+a {
+    color: #FF66AA;
+}
+
 footer{
 	font-family: "Verdana";
 	position:fixed;
@@ -73,5 +91,6 @@ footer{
 	padding-bottom:1%;
     bottom: 0;
 	background-color: rgba(150, 150, 150, .5);
+	font-size:110%;
 }
 
