--- a/css/search.css
+++ b/css/search.css
@@ -18,7 +18,7 @@ body {
 
 .content {
 	display:block;
-    width: 55%;
+    width: 80%;
 	height:100px;
 	margin:auto;
 	margin-top:1%;
@@ -37,13 +37,17 @@ body {
 	border-radius:50px;
 }
 
+#alignRight{
+	float : right;
+}
+
 .content:hover{
 	background-color: rgba(150, 150, 150, .7);
 }
 
 .requestContent {
 	display:block;
-    width: 40%;
+    width: 80%;
 	height:100px;
 	margin:auto;
 	margin-top:1%;
@@ -74,12 +78,20 @@ body {
     transition: all 1s ease;
     max-width: 100%;
 }
-.content:hover img {
+.content:hover #anim img {
     -webkit-transform:scale(1.25); /* Safari and Chrome */
     -moz-transform:scale(1.25); /* Firefox */
     -ms-transform:scale(1.25); /* IE 9 */
     -o-transform:scale(1.25); /* Opera */
      transform:scale(1.25);
+}
+
+.rotate90 {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 #anim {
@@ -88,6 +100,19 @@ body {
 	float: left;
 	height:100px;
 	border-radius:50px;
+}
+
+.img-valign {
+  vertical-align: middle;
+  margin-bottom: 0.75em;
+}
+
+.div-align {
+	display: table;
+	margin:0 auto;
+	font-family:"Verdana";
+	font-size:30px;
+	margin-top:2%;
 }
 
 footer{
