Added Replay library in the user profile

--- a/css/userProfile.css
+++ b/css/userProfile.css
@@ -64,6 +64,12 @@ body {
 
 #replayList img {
   border: 5px solid white;
+  height:180px;
+  width:240px;
+}
+
+#replayList a {
+  border: 5px solid transparent;
 }
 
 #replayList img:hover {
