--- a/css/view.css
+++ b/css/view.css
@@ -3,6 +3,35 @@ body {
 	padding-bottom:5%;
 }
 
+.block {
+  display: block;
+	margin:auto;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: rgba(150, 150, 150, .5);
+  border-radius:50px;
+}
+
+#profileBlock {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 2%;
+  padding: 1% 1% 1% 3%;
+  color:black;
+  font-family: "verdana";
+  text-align: center;
+}
+
+#profileBlock img{
+  border-radius:200px;
+  border-style: solid;
+  border-color: white;
+}
+
+#profileBlock:hover{
+  background-color: rgba(150, 150, 150, .7);
+}
+
 span{
 	display:block;
 	font-family:"Verdana";
@@ -10,6 +39,10 @@ span{
 	text-align:center;
 	margin:auto;
 	margin-bottom:2%;
+  margin-top:2%;
+  font-size: 200%;
+  color: black;
+  text-shadow: 2px 2px 0px rgba(150, 150, 150, 1);
 }
 
 iframe{
@@ -67,7 +100,7 @@ section{
 	background-color: rgba(150, 150, 150, .5);
 	border-radius:50px;
 	margin:auto;
-	margin-top:2%;
+	margin-top:1%;
 	margin-bottom:2%;
 	text-align:center;
 }
