--- a/css/editProfile.css
+++ b/css/editProfile.css
@@ -98,6 +98,14 @@ h1{
 #uploadSkinZone{
   padding:1% 1% 1% 1%;
   border-radius: 20px;
+  margin-bottom: 1%;
+  background-color: rgba(150, 150, 150, .6);
+}
+
+#removeSkinZone{
+  padding:1% 1% 1% 1%;
+  border-radius: 20px;
+  margin-bottom: 4%;
   background-color: rgba(150, 150, 150, .6);
 }
 
@@ -110,4 +118,12 @@ h1{
 
 input[type=submit]{
   padding:0.5% 3% 0.5% 3%;
+}
+
+input[type=checkBox]{
+  -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
+  padding: 10px;
 }
