--- a/css/index_v2.css
+++ b/css/index_v2.css
@@ -16,6 +16,8 @@ i {
   text-align:center;
 }
 
+/*Top navigation bar*/
+
 .top-nav{
   position:fixed;
   top:0;
@@ -51,8 +53,8 @@ i {
 }
 
 #logo{
-    margin-top: 5%;
-    border-radius:100px;
+  margin-top: 5%;
+  border-radius:100px;
 }
 
 .floatleft {
@@ -73,19 +75,180 @@ i {
 #slogan{
   text-align:center;
   font-size: 3vw;
-  color: white;
-  text-shadow: 3px 3px gray;
+  color: #CC5288;
+  text-shadow: 3px 3px white;
   margin-bottom: 3%;
 }
 
 #etapes{
   text-align:center;
+  margin-bottom: 2%;
 }
 
-#etapes img{
+.align_center{
+  text-align:center;
+}
+
+.item{
+  vertical-align: top;
+  display: inline-block;
+  text-align: center;
+  width: 25vw;
+}
+
+.item img{
   border-radius:200px;
   border-width: 5px;
   border-style: solid;
   border-color: white;
   width:20vw;
+  margin-bottom: 1%;
+}
+
+.caption {
+  display: block;
+  font-size: 1.5vw;
+  font-style: oblique;
+}
+
+.button{
+    background-color: #FF66AA;
+    border-color: white;
+    border-radius:10%;
+    color: white;
+    padding: 1% 3%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vw;
+    margin-bottom: 5%;
+}
+
+.button:hover{
+  background-color: #7F3355;
+}
+
+/*Upload*/
+#upload_title{
+  text-align:center;
+  font-size: 2vw;
+  color: #FF66AA;
+  text-shadow: 3px 3px white;
+  margin-bottom: 1%;
+}
+
+#upload_subtitle{
+  text-align:center;
+  font-size: 1.5vw;
+  color: #FF66AA;
+  text-shadow: 3px 3px white;
+  margin-bottom: 2%;
+}
+
+#fileToUpload{
+  margin:auto;
+	width:90%;
+  display: block;
+  border-radius:20px;
+  border: 3px dashed #555;
+  padding-top: 6%;
+  padding-bottom:6%;
+  text-align: center;
+}
+
+/* Modal */
+.modal {
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#replay_box{
+  border: 2px solid black;
+  display: block;
+  width:90%;
+  height: 20%;
+  margin:auto;
+  margin-bottom: 2%;
+  margin-top: 2%;
+}
+
+#replay_box img{
+  height:100%;
+  margin-right: 1%;
+  float:left;
+}
+
+#replay_text{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(20%, auto);
+}
+
+#replay_text span{
+  font-size: 1.5vw;
+}
+
+/* grid */
+#beatmap{
+  grid-column: 1;
+  grid-row: 1;
+}
+#diff{
+  grid-column: 1;
+  grid-row: 2;
+}
+#player{
+  grid-column: 1;
+  grid-row: 3;
+}
+#mods{
+  grid-column: 2;
+  grid-row: 1;
+}
+#time{
+  grid-column: 2;
+  grid-row: 3;
+}
+
+#check_list{
+  width:90%;
+  margin: auto;
+}
+
+#check_list img{
+  height: 6%;
+  vertical-align: middle;
 }
