--- a/css/index_v2.css
+++ b/css/index_v2.css
@@ -168,13 +168,16 @@ i {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow-y: auto;
 }
 
 /* Modal Content/Box */
 .modal-content {
+    border-radius: 100px;
+    padding-top: 2%;
+    padding-bottom: 2%;
     background-color: #fefefe;
     margin: 5% auto; /* 15% from the top and centered */
-    padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
 }
@@ -235,20 +238,90 @@ i {
   grid-row: 3;
 }
 #mods{
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 1;
+  grid-row: 4;
 }
 #time{
   grid-column: 2;
-  grid-row: 3;
+  grid-row: 4;
 }
+
+/* replay start*/
 
 #check_list{
-  width:90%;
+  display:grid;
+  grid-template-columns:  auto auto auto;
+  grid-gap: 10px;
   margin: auto;
+  margin-bottom: 2%;
 }
 
-#check_list img{
-  height: 6%;
+.modal_item{
+  vertical-align: top;
+  display: inline-block;
+  text-align: center;
+}
+
+.modal_item img{
+  height: 20vh;
+  border-radius:200px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: lightgreen;
+  margin-bottom: 1%;
+}
+
+.modal_caption{
+  display: block;
+  font-size: 1vw;
+  font-style: oblique;
+}
+
+#replay_start{
+
+}
+
+input[type="submit"]{
+  margin-top: 1%;
+  background-color: #FF66AA;
+  border-color: white;
+  border-radius:10%;
+  color: white;
+  padding: 1% 3%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 2vw;
+  margin-bottom: 1%;
+}
+
+#checkBox{
+  height: 25px;
+  width: 25px;
   vertical-align: middle;
+}
+
+#replay_start span{
+  font-size: 1.5vw;
+}
+
+#replay_start button{
+  background-color: red;
+  border-color: white;
+  border-radius:10%;
+  color: white;
+  padding: 1% 3%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1vw;
+  margin-left: 5%;
+}
+
+.modal_title{
+  text-align: center;
+  color:#FF66AA;
+  text-shadow: 3px 3px #FFB2D4;
+  margin-bottom: 3%;
+  font-size: 2vw;
 }
