--- a/css/index_v2.css
+++ b/css/index_v2.css
@@ -158,7 +158,7 @@ i {
 
 /* Modal */
 .modal {
-    display: block; /* Hidden by default */
+    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
@@ -293,6 +293,10 @@ input[type="submit"]{
   display: inline-block;
   font-size: 2vw;
   margin-bottom: 1%;
+}
+
+input[type="submit"]:disabled{
+  opacity: 0.5;
 }
 
 #checkBox{
