--- a/css/index_v2.css
+++ b/css/index_v2.css
@@ -209,14 +209,14 @@ i {
   border: 2px solid black;
   display: block;
   width:90%;
-  height: 20%;
+  height: auto;
   margin:auto;
   margin-bottom: 2%;
   margin-top: 2%;
 }
 
 #replay_box img{
-  height:100%;
+  height:20%;
   margin-right: 1%;
   float:left;
 }
@@ -338,7 +338,7 @@ input[type="submit"]:disabled{
 footer{
   background-image: url("../images/background2.png");
   border-top: solid #FF66AA 10px;
-  padding-bottom: 3%;
+  padding-bottom: 2%;
 }
 
 footer h3{
@@ -359,6 +359,7 @@ footer a:hover{
 }
 
 .footer_img{
+  margin-top: 2%;
   text-align: center;
 }
 
@@ -371,7 +372,7 @@ footer a:hover{
 
 #created img{
  vertical-align:middle;
- height: 15%;
+ height: 100px;
  border-radius: 100%;
  border: solid white 2px;
 }
