--- a/css/index_v2.css
+++ b/css/index_v2.css
@@ -16,54 +16,6 @@ i {
   text-align:center;
 }
 
-/*Top navigation bar*/
-
-.top-nav{
-  position:fixed;
-  top:0;
-  display:flex;
-  overflow:visible;
-  height:10vh;
-  width:100vw;
-  justify-content: center;
-  align-items:center;
-  background-color: #FF66AA;
-  border-bottom:solid white 10px;
-}
-
-.nav-link{
-  padding: 14px 16px;
-  color: white;
-  text-decoration: none;
-  font-size: 3vh;
-  border-radius:100px;
-  align-items:center;
-}
-
-.top-nav a:hover {
-  background-color: #FFB2D4;
-}
-
-#logo:hover {
-  opacity: 0.9;
-}
-
-#logo img{
-  width: 20vh;
-}
-
-#logo{
-  margin-top: 5%;
-  border-radius:100px;
-}
-
-.floatleft {
-    float:left;
-}
-.floatright {
-    float:right;
-}
-
 /* Presentation */
 #title{
   text-align: center;
@@ -206,7 +158,6 @@ i {
 }
 
 #replay_box{
-  border: 2px solid black;
   display: block;
   width:90%;
   height: auto;
@@ -216,12 +167,13 @@ i {
 }
 
 #replay_box img{
-  height:20%;
+  width: 20%;
   margin-right: 1%;
   float:left;
 }
 
 #replay_text{
+  border: 2px solid black;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
@@ -232,9 +184,15 @@ i {
   font-size: 1.5vw;
 }
 
+.info_text{
+  color: #CC5288;
+  font-weight: bold;
+}
+
+
 /* grid */
 #beatmap{
-  grid-column: 1;
+  grid-column: 1 / 3;
   grid-row: 1;
 }
 #diff{
@@ -299,6 +257,11 @@ input[type="submit"]{
   margin-bottom: 1%;
 }
 
+input[type="submit"]:hover:enabled{
+  opacity: 0.8;
+  cursor: pointer;
+}
+
 input[type="submit"]:disabled{
   opacity: 0.5;
 }
@@ -324,6 +287,11 @@ input[type="submit"]:disabled{
   display: inline-block;
   font-size: 1vw;
   margin-left: 5%;
+}
+
+#replay_start button:hover{
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 .modal_title{
