--- a/css/search.css
+++ b/css/search.css
@@ -1,6 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
     background-image: url("../images/background.png");
-	padding-bottom:5%;
+	padding-top: 20vh;
 }
 
 #form{
