--- a/css/view.css
+++ b/css/view.css
@@ -14,7 +14,21 @@ body {
   text-align: center;
   color:#FF66AA;
    text-shadow: 3px 3px white;
+}
+
+#subtitle{
+  text-align: center;
+  color:black;
+   text-shadow: 1px 1px gray;
    margin-bottom: 3%;
+   font-size: 1.5vw;
+}
+
+#section_title{
+  font-size: 130%;
+  margin-bottom: 2%;
+  color: #FF66AA;
+  text-shadow: 1px 1px gray;
 }
 
 .align_center{
@@ -35,7 +49,7 @@ body {
   align-items: center;
   display:inline-flex;
   flex-direction: column;
-  height:73vh;
+  height:78vh;
   width:31vw;
   margin-left: 1%;
   padding-top: 2vh;
@@ -52,16 +66,15 @@ body {
   margin-bottom: 3%;
 }
 
-#beatmapName{
-  font-size: 130%;
-  margin-bottom: 2%;
-  color: #FF66AA;
-}
-
 /* accounts */
 #account_block{
-  text-align: center;
-  width: 100%;
+  display: flex;
+  background-color: lightgray;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 25vw;
+  height:25vh;
   margin-bottom: 2%;
 }
 
@@ -75,7 +88,6 @@ body {
 
 .account_image{
   border-radius: 100px;
-  margin-right: 2%;
 }
 
 .account_image:hover{
@@ -86,6 +98,17 @@ body {
   border-radius: 100px;
   height: 10vh;
   vertical-align: middle;
+}
+
+/* mods */
+#modsBlock{
+  background-color: lightgray;
+  border-radius: 10px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 2%;
+  padding-top: 1%;
+  text-align: center;
 }
 
 /* Source - replay and skin */
