--- a/css/userProfile.css
+++ b/css/userProfile.css
@@ -1,6 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("../images/background.png");
-	padding-bottom:5%;
+	padding-top: 20vh;
+  font-family: "Verdana";
 }
 
 .block {
@@ -10,6 +16,10 @@ body {
   margin-right: 10%;
   background-color: rgba(150, 150, 150, .5);
   border-radius:50px;
+}
+
+.align_center{
+  text-align: center;
 }
 
 .back{
