--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,7 @@ i {
     padding-bottom: 2%;
     background-color: #fefefe;
     margin: 5% auto; /* 15% from the top and centered */
+    margin-top: 20vh;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
 }
