--- a/css/forgotPassword.css
+++ b/css/forgotPassword.css
@@ -1,7 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("../images/background.png");
-	padding-bottom:5%;
+  padding-top: 20vh;
   font-family: "Verdana";
+}
+
+.align_center{
+  text-align: center;
+}
+
+#title{
+  text-align: center;
+  color:#FF66AA;
+   text-shadow: 3px 3px white;
+   margin-bottom: 3%;
 }
 
 h1{
@@ -21,6 +37,7 @@ h1{
 #block{
   padding-top: 5%;
   padding-bottom: 5%;
+   margin-bottom:2%;
 }
 
 .back{
