--- a/css/editProfile.css
+++ b/css/editProfile.css
@@ -1,7 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("../images/background.png");
-	padding-bottom:5%;
-  font-family: "verdana";
+	/*padding-bottom:5%;*/
+  padding-top: 20vh;
+  font-family: "Verdana";
+}
+
+#title{
+  text-align: center;
+  color:#FF66AA;
+   text-shadow: 3px 3px white;
+   margin-bottom: 3%;
+}
+
+.align_center{
+  text-align: center;
 }
 
 .block {
@@ -40,6 +57,7 @@ h1{
   margin-top: 2%;
   text-align: center;
   padding:1% 1% 1% 1%;
+  margin-bottom: 2%;
 }
 
 /*#editBlocks{
