--- a/css/register.css
+++ b/css/register.css
@@ -1,6 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("../images/background.png");
-	padding-bottom:5%;
+	/*padding-bottom:5%;*/
+  padding-top: 20vh;
+  font-family: "Verdana";
 }
 
 form {
