--- a/css/view.css
+++ b/css/view.css
@@ -10,6 +10,60 @@ body {
   font-family: "Verdana";
 }
 
+/* Modal */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow-y: auto;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    border-radius: 50px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #fefefe;
+    margin: 5% auto; /* 15% from the top and centered */
+    margin-top: 20vh;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.modal-content button{
+  width:20vw;
+  height:5vh;
+  margin: auto;
+  font-size: 1.2vw;
+  margin-top: 1%;
+}
+
+.modal-content input[type="submit"]{
+  width:20vw;
+  height:5vh;
+  margin: auto;
+  font-size: 1.2vw;
+  margin-top: 1%;
+}
+
+#button_yes{
+  background-color: lightgreen;
+}
+
+#button_no{
+  background-color: red;
+}
+
 /* Video */
 #title{
   text-align: center;
@@ -140,11 +194,13 @@ body {
 
   margin-top: 2%;
   margin-left: 1%;
-  width: 64vw;
+  width: 62vw;
+  height:15vh;
   padding: 1%;
   display: flex;
   flex-direction: column;
   text-align: center;
+  float:left;
 }
 
 #share_section {
@@ -157,4 +213,30 @@ body {
 #share_section img{
   height: 10vh;
   border-radius: 20%;
+}
+
+.third_block{
+  background-color: lightgray;
+  border-radius: 10px;
+  float: right;
+  height:17vh;
+  width:31vw;
+  margin-top: 2%;
+  margin-right: 2%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  float: right;
+  vertical-align: middle;
+  padding-top: 1%;
+}
+
+#manage_section{
+  display: inline-block;
+}
+#manage_section a:hover{
+  opacity: 0.5;
+}
+#manage_section img{
+  height: 10vh;
 }
