Centered navbar and improved skin upload

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -18,7 +18,7 @@
 .nav-link{
   padding: 14px 16px;
   display:inline-block;
-  width:auto;
+  width:10vw;
   text-align: center;
   color: white;
   text-decoration: none;
