--- a/css/index.css
+++ b/css/index.css
@@ -125,8 +125,8 @@ i {
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    width: 100vw; /* Full width */
+    height: 100vh; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -135,14 +135,14 @@ i {
 
 /* Modal Content/Box */
 .modal-content {
-    border-radius: 100px;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    border-radius: 5%;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
     background-color: #fefefe;
     margin: 5% auto; /* 15% from the top and centered */
     margin-top: 20vh;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80vw; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -271,7 +271,7 @@ input[type="text"]:invalid{
 }
 
 .modal_item img{
-  height: 20vh;
+  width: 15vw;
   border-radius:200px;
   border-width: 5px;
   border-style: solid;
@@ -362,10 +362,53 @@ input[type="submit"]:disabled{
     font-size: 3vw;
   }
 
+  .modal_caption{
+    font-size: 1.2vw;
+  }
+
+  [class*="modal_item"] img{
+      width:20vw;
+  }
+
+  /* Start processing button*/
+  input[type="submit"]{
+    padding: 2% 4%;
+    font-size: 4vw;
+  }
+
+  /* Cancel button */
+  #replay_start button{
+    padding: 2% 4%;
+    font-size: 3vw;
+  }
+
+  #replay_start span{
+    font-size: 3vw;
+  }
+
+  #checkBox{
+    height: 40px;
+    width: 40px;
+  }
+
   #upload_title{
     font-size: 4vw;
   }
   #upload_subtitle{
-    font-size: 3vw;
+    font-size: 4vw;
+  }
+
+  #userImage{
+    width:30%;
+  }
+
+  input[type="text"]{
+    width:25%;
+    font-size:25px;
+  }
+
+  #newUserButton{
+    padding: 2vw 2vw;
+    vertical-align: middle;
   }
 }
