--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,20 @@
 /* FOOTER */
+body{
+  position: relative;
+  padding-bottom: 30rem;
+  min-height: 100%;
+}
+
 footer{
   background-image: url("../images/background2.png");
   border-top: solid #FF66AA 10px;
   padding-bottom: 5%;
-  bottom:0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width:100%;
+  /*padding: 1rem;*/
 }
 
 footer h3{
@@ -41,6 +51,11 @@ footer a:hover{
  height: 10vh;
  border-radius: 100%;
  border: solid white 2px;
+}
+
+.spacer{
+  height:25vh;
+  /*background-color: red;*/
 }
 
 /* Mobiles */
