--- a/css/login.css
+++ b/css/login.css
@@ -23,14 +23,14 @@ body {
 
 /* Bordered form */
 form {
-   border: 3px solid #f1f1f1;
+   /*border: 3px solid #f1f1f1;*/
    width:50vw;
    margin:auto;
 }
 
 b{
   font-family: "Verdana";
-  font-size: 15px;
+  font-size: 100%;
 }
 
 /* Full-width inputs */
@@ -152,15 +152,34 @@ span.psw {
    opacity: 1;
 }
 
-@media only screen and (max-width: 1080px) and (orientation: portrait){
+@media only screen and (orientation: portrait){
 
   form {
      margin:auto;
      width:80vw;
   }
 
+  b{
+      font-size: 4vw;
+  }
+
+  #title{
+    font-size: 5vw;
+  }
+
+  input[type=text], input[type=password] {
+     font-size: 4vw;
+  }
+
+  button {
+     font-size: 4vw;
+  }
+
+  .psw{
+    font-size: 3vw;
+  }
   .g-recaptcha{
-    transform:scale(0.77);
+    transform:scale(0.88);
     transform-origin:0 0;
   }
 }
