--- a/css/view.css
+++ b/css/view.css
@@ -100,8 +100,8 @@ body {
 }
 
 .player_container{
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .right_content{
@@ -225,17 +225,16 @@ body {
 .third_block{
   background-color: lightgray;
   border-radius: 10px;
-  float: right;
-  height:17vh;
+  height:auto;
   width:31vw;
   margin-top: 2%;
   margin-right: 2%;
   display: flex;
   flex-direction: column;
   text-align: center;
-  float: right;
   vertical-align: middle;
   padding-top: 1%;
+  margin: auto;
 }
 
 #manage_section{
@@ -296,6 +295,11 @@ body {
   }
   #modsBlock img{
     height: 5vh;
+  }
+
+  .player_container{
+    margin-left: 1%;
+    margin-right: 1%;
   }
 
 }
