--- a/css/login.css
+++ b/css/login.css
@@ -168,7 +168,8 @@ span.psw {
   }
 
   input[type=text], input[type=password] {
-     font-size: 4vw;
+     /*font-size: 4vw;*/
+     font-size: 16px;
   }
 
   button {
