--- a/css/forgotPassword.css
+++ b/css/forgotPassword.css
@@ -24,12 +24,16 @@ h1{
   text-align: center;
 }
 
+h2{
+  font-size: 150%;
+}
+
 .block {
   display: block;
 	margin:auto;
   margin-left: 10%;
   margin-right: 10%;
-  background-color: rgba(150, 150, 150, .5);
+  /*background-color: rgba(150, 150, 150, .5);*/
   border-radius:50px;
   text-align: center;
 }
@@ -46,4 +50,29 @@ h1{
   position: sticky;
   right: 0;
   top: 0;
+}
+
+input[type='email'] {
+   width: 80%;
+   padding: 12px 20px;
+   margin: 8px 0;
+   margin-top: 5vh;
+   display: inline-block;
+   border: 1px solid #ccc;
+   box-sizing: border-box;
+}
+
+input[type="submit"] {
+   background-color: #4CAF50;
+   color: white;
+   padding: 14px 20px;
+   margin: 8px 0;
+   border: none;
+   cursor: pointer;
+   width: 80%;
+}
+
+/* Add a hover effect for buttons */
+input[type="submit"]:hover {
+   opacity: 0.8;
 }
