--- a/css/login.css
+++ b/css/login.css
@@ -169,7 +169,7 @@ span.psw {
 
   input[type=text], input[type=password] {
      /*font-size: 4vw;*/
-     font-size: 20px;
+     font-size: 4vw;
   }
 
   button {
