--- a/css/progress.css
+++ b/css/progress.css
@@ -138,6 +138,50 @@ body {
   font-size: 2vw;
 }
 
+#cancel_section{
+  border-radius: 50px;
+  height:auto;
+  margin:0% 4%;
+  margin-top: 2%;
+  border: 5px solid #FFB2D4;
+  background-color: lightgray;
+  padding: 1%;
+}
+
+#cancel_section div{
+  margin-bottom: 1%;
+}
+
+#cancel_section h3{
+  text-align: center;
+  color:black;
+  text-shadow: 2px 2px gray;
+  font-size: 2vw;
+}
+
+#cancel_section h4{
+  text-align: center;
+  color:black;
+  font-size: 1.2vw;
+}
+
+form {
+    margin: auto;
+    text-align: center;
+}
+
+input[type="file"]{
+  margin-top: 1%;
+  margin-bottom: 1%;
+  text-align: center;
+  padding-left: 15vw;
+  padding-right: 15vw;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  border: 0.2vw gray dotted;
+  border-radius: 50px;
+}
+
 /*Mobiles */
 @media only screen and (orientation: portrait){
   #title{
@@ -170,5 +214,19 @@ body {
   }
   #list_section span{
     font-size: 3vw;
+  }
+
+  #cancel_section h3{
+    font-size: 3.5vw;
+  }
+  #cancel_section span{
+    font-size: 3vw;
+  }
+  #cancel_section h4{
+    font-size: 2.3vw;
+  }
+  input[type="file"]{
+    padding-left: 5vw;
+    padding-right: 5vw;
   }
 }
