--- a/css/view.css
+++ b/css/view.css
@@ -145,7 +145,7 @@ body {
 }
 
 #profile_image{
-  height: 20vh;
+  max-height: 70%;
   border-radius: 500px;
   vertical-align: middle;
   border: 5px solid white;
@@ -153,6 +153,7 @@ body {
 }
 
 .account_image{
+  max-height: 30%;
   border-radius: 100px;
 }
 
@@ -178,10 +179,16 @@ body {
   width:25vw;
 }
 
+#modsBlock img{
+  max-height: 100%;
+}
+
 /* Source - replay and skin */
 #download_section{
+  display: inline-block;
   background-color: lightgray;
   border-radius: 10px;
+  height: 20vh;
   width: 25vw;
   text-align: center;
 }
@@ -190,7 +197,7 @@ body {
   opacity: 0.6;
 }
 #download_section img{
-  height: 13vh;
+  height: 50%;
 }
 
 .disabled{
@@ -281,7 +288,7 @@ body {
 }
 
 /*Mobiles*/
-@media only screen and (orientation: portrait){
+@media only screen and (max-width: 1080px) and (orientation: portrait){
   /* Titles */
   #title{
     font-size: 5vw;
@@ -316,9 +323,6 @@ body {
     text-align: center;
     margin-bottom: 2%;
   }
-  #download_section img{
-    height: 13vh;
-  }
 
   /* mods */
   #modsBlock{
@@ -340,9 +344,14 @@ body {
   }
 
   .bottom_block{
-    margin-left: 1%;
-    margin-right: 1%;
-    width: 90%;
+    width: 90vw;
+    margin:auto;
+    margin-left:5%;
+    height:auto;
+  }
+
+  #share_section {
+   
   }
 
 }
