--- a/css/editProfile.css
+++ b/css/editProfile.css
@@ -224,3 +224,20 @@ input[type=checkBox]{
   -o-transform: scale(1.5); /* Opera */
   padding: 10px;
 }
+
+.grid-container {
+  display: grid;
+  grid-column-gap: 2%;
+  grid-template-columns: auto auto auto;
+  text-align: center;
+  width:90%;
+  margin: auto;
+}
+
+.grid-item{
+  grid-column-start: auto;
+  grid-row-start: auto;
+  margin: 5px;
+  text-align: left;
+  font-size: 110%;
+}
