Finished patreon page

--- a/css/patreon.css
+++ b/css/patreon.css
@@ -46,6 +46,7 @@
       border: 2px solid rgb(231, 113, 166);
       padding-top: 1%;
       padding-bottom: 1%;
+      margin-bottom: 1%;
   }
 
   #join_block_button{
